--- a/app1/Cargo.toml
+++ b/app1/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 actix-web = "4"
 serde = "1.0.228"
 jsonwebtoken = "=9.3.1"
+reqwest = { version = "0.12.23", features = ["json"] }
+thiserror = "2"
